Add test for when parser contains directive

--- a/docs/parser_behavior.ipynb
+++ b/docs/parser_behavior.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "5e124cb6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "992f7cef",
    "metadata": {},
    "outputs": [
@@ -41,8 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParsedCell(index=0,\n",
-      "           type='markdown',\n",
+      "ParsedCell(type='markdown',\n",
       "           title='Introduction',\n",
       "           bullets=[],\n",
       "           paragraphs=['This notebook demonstrates parsing.'],\n",
@@ -56,7 +55,7 @@
    ],
    "source": [
     "md_cell = new_markdown_cell('# Introduction\\n\\nThis notebook demonstrates parsing.')\n",
-    "parsed = parse_markdown_cell(md_cell, index=0)\n",
+    "parsed = parse_markdown_cell(md_cell)\n",
     "pprint.pprint(parsed)"
    ]
   },
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "12513a9f",
    "metadata": {},
    "outputs": [
@@ -79,8 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParsedCell(index=1,\n",
-      "           type='markdown',\n",
+      "ParsedCell(type='markdown',\n",
       "           title='Key Findings',\n",
       "           bullets=['First insight', 'Second insight'],\n",
       "           paragraphs=[],\n",
@@ -94,7 +92,7 @@
    ],
    "source": [
     "md_bullets = new_markdown_cell('# Key Findings\\n\\n- First insight\\n- Second insight')\n",
-    "parsed_bullets = parse_markdown_cell(md_bullets, index=1)\n",
+    "parsed_bullets = parse_markdown_cell(md_bullets)\n",
     "pprint.pprint(parsed_bullets)"
    ]
   },
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f73d7066",
    "metadata": {},
    "outputs": [
@@ -117,8 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParsedCell(index=2,\n",
-      "           type='markdown',\n",
+      "ParsedCell(type='markdown',\n",
       "           title='Data Source',\n",
       "           bullets=[],\n",
       "           paragraphs=['See BLS (https://bls.gov) for details.'],\n",
@@ -132,7 +129,7 @@
    ],
    "source": [
     "md_link = new_markdown_cell('# Data Source\\n\\nSee [BLS](https://bls.gov) for details.')\n",
-    "parsed_link = parse_markdown_cell(md_link, index=2)\n",
+    "parsed_link = parse_markdown_cell(md_link)\n",
     "pprint.pprint(parsed_link)"
    ]
   },
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "fccff8b7",
    "metadata": {},
    "outputs": [
@@ -154,8 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParsedCell(index=2,\n",
-      "           type='markdown',\n",
+      "ParsedCell(type='markdown',\n",
       "           title='Data Source',\n",
       "           bullets=['There is data', 'See BLS (https://bls.gov) for details.'],\n",
       "           paragraphs=[],\n",
@@ -169,7 +165,7 @@
    ],
    "source": [
     "md_bullet_link = new_markdown_cell('# Data Source\\n\\n- There is data\\n- See [BLS](https://bls.gov) for details.')\n",
-    "parsed_bullet_link = parse_markdown_cell(md_bullet_link, index=2)\n",
+    "parsed_bullet_link = parse_markdown_cell(md_bullet_link)\n",
     "pprint.pprint(parsed_bullet_link)"
    ]
   },
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "777efe09",
    "metadata": {},
    "outputs": [
@@ -192,8 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParsedCell(index=3,\n",
-      "           type='code',\n",
+      "ParsedCell(type='code',\n",
       "           title=None,\n",
       "           bullets=[],\n",
       "           paragraphs=[],\n",
@@ -226,7 +221,7 @@
     "        }\n",
     "    ]\n",
     "}\n",
-    "parsed_code = parse_code_cell(fake_code_cell, index=3)\n",
+    "parsed_code = parse_code_cell(fake_code_cell)\n",
     "pprint.pprint(parsed_code)"
    ]
   },
@@ -241,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "a1ab01c7",
    "metadata": {},
    "outputs": [
@@ -249,8 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParsedCell(index=3,\n",
-      "           type='code',\n",
+      "ParsedCell(type='code',\n",
       "           title=None,\n",
       "           bullets=[],\n",
       "           paragraphs=[],\n",
@@ -302,7 +296,7 @@
     "}\n",
     "\n",
     "\n",
-    "parsed_code = parse_code_cell(fake_code_cell, index=3)\n",
+    "parsed_code = parse_code_cell(fake_code_cell)\n",
     "pprint.pprint(parsed_code)\n"
    ]
   }
