updated renderer with tests

--- a/examples/data/rich_demo_notebook_realtext.ipynb
+++ b/examples/data/rich_demo_notebook_realtext.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "<!-- slide: new-->\n",
     "# 📘 Sample Analysis Notebook\n",
+    "* Data analysis is a critical part of any decision-making process\n",
+    "* This notebook demonstrates linear regression on a simple dataset\n",
+    "* We demonstrate the case for noise-free and noisy data\n",
     "This notebook demonstrates a basic data analysis workflow using Python. We'll begin by exploring a sample dataset, visualizing the raw data, and performing a linear regression analysis to uncover trends."
    ]
   },
@@ -16,10 +19,9 @@
    "metadata": {},
    "source": [
     "<!-- slide: new -->\n",
-    "## 📚 Background\n",
-    "* Data analysis is a critical part of any decision-making process\n",
-    "* This notebook demonstrates linear regression on a simple dataset\n",
-    "* We demonstrate the case for noise-free and noisy data"
+    "# 📚 Dataset\n",
+    "* The data is contained in the table presented here\n",
+    "* We would like the slide layout to show both the bullet points and the table"
    ]
   },
   {
@@ -138,6 +140,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73914dd3",
+   "metadata": {},
+   "source": [
+    "# Plotting\n",
+    "* Now we plot the data\n",
+    "* The plotting code should not be rendered\n",
+    "* The figure should be rendered"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "8dd0d8092fe74a7c96281538738b07e2",
@@ -218,23 +231,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "id": "0ce31431",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "* Even though these bullet points follow the plot, they should still be rendered\n",
+    "* Right now the slide layout does not care whether the bullets come before or after the plot"
+   ]
   },
   {
    "cell_type": "markdown",
