add optional attribution as last slide

--- a/examples/data/jupdeck_overview.ipynb
+++ b/examples/data/jupdeck_overview.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "cb3eb52f",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "b9cdc4a5",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "64261cdc",
    "metadata": {},
    "outputs": [
@@ -141,10 +141,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "65a3036c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Rows</th>\n",
+       "      <th>Source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>internal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>3400</td>\n",
+       "      <td>public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>230</td>\n",
+       "      <td>public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>9800</td>\n",
+       "      <td>internal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Dataset  Rows    Source\n",
+       "0       A  1200  internal\n",
+       "1       B  3400    public\n",
+       "2       C   230    public\n",
+       "3       D  9800  internal"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -152,7 +220,9 @@
     "    \"Dataset\": [\"A\", \"B\", \"C\", \"D\"],\n",
     "    \"Rows\": [1200, 3400, 230, 9800],\n",
     "    \"Source\": [\"internal\", \"public\", \"public\", \"internal\"]\n",
-    "})"
+    "})\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -165,8 +235,7 @@
     "- Smart layout engine\n",
     "- Custom themes (corporate, dark mode)\n",
     "- LLM-powered summarization\n",
-    "\n",
-    "👉 See more at: https://github.com/JenDobson/jupdeck"
+    "- See more at: https://github.com/JenDobson/jupdeck"
    ]
   }
  ],
